# haze-prediction

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.yaml  config_convnext.yaml  dataset.py  docker-compose.yml  docker-start.sh  evaluate_full_dataset.py  evaluate_lightgbm.py  generate_eval_cache.py  init-db.sql  prepare_data.py  pyproject.toml  requirements.txt  test_setup.py  train_models.py  train_models_lgbm.py  train_vit.py
APIs/: data.md
Earth/: Sentinel-2.md
Wind/: OpenMeteo.md
app/: Dockerfile  README.md  build_docker.sh  inference.py  requirements.txt
benchmark/: benchmark_test.py  create_test_set.py  run_benchmark.sh
deployment/: CICD_QUICKSTART.md  CICD_SETUP.md  DEPLOYMENT_SUMMARY.md  GCP_DEPLOYMENT.md  MODEL_MANAGEMENT.md  QUICKSTART.md
evaluation/: complete_evaluation.sh  compute_metrics.py  run_evaluation.py
lucas/: .cache.sqlite  get_weather_data.py
lucas-real/: era5.py  read_wind_data.py  server.py  test.py  wind_data.nc
models/: lightgbm_24h.pkl  lightgbm_48h.pkl  lightgbm_72h.pkl  lightgbm_7d.pkl  linear_regression_24h.pkl  linear_regression_48h.pkl  linear_regression_72h.pkl  linear_regression_7d.pkl
scripts/: convert_era5_grib.py  convert_era5_to_csv.py  download_era5.py  download_grid_weather.py  download_regional_weather.py  init_db.py  inspect_era5_grib.py  train_with_different_models.py
sentinel-images/: .env  QuickStart.md  README.md  analyze_motion.py  dataspace_stac_download.py  detect_haze.py  download_tiles.py  inspect_tiles.py  requirements.txt  run_pipeline.py  (+3 more)
(+182 files in other folders)
